fixed scrollbar width, better global display settings

--- a/twitter.gt2eb.style.scss
+++ b/twitter.gt2eb.style.scss
@@ -2,7 +2,7 @@
   --bgColors:$;
   --color-user:       $userColor;
   --scrollbar-width:  $scrollbarWidth;
-  --font-increment:   $fontIncrement;
+  --font-increment:   calc($globalFontSize - 15px);
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
 }
